--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     A Web Developer.
                 </h1>
                 <div class="btn-con">
-                    <a href="" class="main-btn">
+                    <a href="Noori ABOU RMIH (2).pdf" class="main-btn">
                         <span class="btn-text">Download CV</span>
                         <span class="btn-icon"><i class="fas fa-download"></i></span>
                     </a>
@@ -51,7 +51,7 @@
                         Willing to relocate: Anywhere
                     </p>
                     <div class="btn-con">
-                        <a href="#" class="main-btn">
+                        <a href="Noori ABOU RMIH (2).pdf" class="main-btn">
                             <span class="btn-text">Download CV</span>
                             <span class="btn-icon"><i class="fas fa-download"></i></span>
                         </a>
