--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
         </section>
         <section class="container" id="portfolio">
             <div class="main-title">
-                <h2>My <span>Portfolio</span><span class="bg-text">My Work</span></h2>
+                <h2>My <span>Work</span><span class="bg-text">My Work</span></h2>
             </div>
             <p class="port-text">
                 Here is some of my work that I've done in various programming languages.
@@ -154,12 +154,12 @@
             <div class="portfolios">
                 <div class="portfolio-item">
                     <div class="image">
-                        <img src="img/port1.jpg" alt="">
+                        <img src="img/Hallween-githube.png" alt="">
                     </div>
                     <div class="hover-items">
                         <h3>Project Source</h3>
                         <div class="icons">
-                            <a href="#" class="icon">
+                            <a href="https://noori-abou-rmih.github.io" class="icon">
                                 <i class="fab fa-github"></i>
                             </a>
                             <a href="https://noori-abou-rmih.github.io/Hallween/" class="icon">
@@ -170,7 +170,7 @@
                 </div>
                 <div class="portfolio-item">
                     <div class="image">
-                        <img src="img/port2.jpg" alt="">
+                        <img src="img/Responsive-web-food.png" alt="">
                     </div>
                     <div class="hover-items">
                         <h3>Project Source</h3>
@@ -187,7 +187,7 @@
                 </div>
                 <div class="portfolio-item">
                     <div class="image">
-                        <img src="img/port3.jpg" alt="">
+                        <img src="img/protfolio.png" alt="">
                     </div>
                     <div class="hover-items">
                         <h3>Project Source</h3>
