--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
             <div class="portfolios">
                 <div class="portfolio-item">
                     <div class="image">
-                        <img src="img/Hallween-githube.png" alt="">
+                        <img src="img/port1.jpg" alt="">
                     </div>
                     <div class="hover-items">
                         <h3>Project Source</h3>
@@ -170,7 +170,7 @@
                 </div>
                 <div class="portfolio-item">
                     <div class="image">
-                        <img src="img/Responsive-web-food.png" alt="">
+                        <img src="img/port2.jpg" alt="">
                     </div>
                     <div class="hover-items">
                         <h3>Project Source</h3>
@@ -187,7 +187,7 @@
                 </div>
                 <div class="portfolio-item">
                     <div class="image">
-                        <img src="img/protfolio.png" alt="">
+                        <img src="img/port3.jpg" alt="">
                     </div>
                     <div class="hover-items">
                         <h3>Project Source</h3>
